<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MineFragment"
    android:background="@drawable/underbackground">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_img_card"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="360dp"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img1"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="@id/user_img_card"
        app:layout_constraintTop_toTopOf="@id/user_img_card" />

    <TextView
        android:id="@+id/user_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="12dp"
        android:text="@string/des"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="@id/user_img_card"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:padding="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/user_img_card">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessLeaf">

            <LinearLayout
                android:id="@+id/ll_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="5dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_weekly" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/week"
                    android:textColor="#999999"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/ll_week"
                android:layout_marginStart="100dp"
                android:layout_toEndOf="@id/ll_week"
                android:orientation="vertical"
                android:padding="5dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_story" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/store"
                    android:textColor="#999999"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_week"
                android:layout_alignStart="@id/ll_week"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="5dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:src="@drawable/error" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/error"
                    android:textColor="#999999"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_xunzhang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_store"
                android:layout_alignStart="@id/ll_store"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="5dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_xunzhang" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/xunazhnag"
                    android:textColor="#999999"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:padding="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">

            <RelativeLayout
                android:id="@+id/rl_we"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we"
                    android:textColor="#999999"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/next" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:textColor="#999999"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/next" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_pingjia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pingjia"
                    android:textColor="#999999"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/next" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>